--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "BSD-4-Clause",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "serve:out": "serve out",
     "build": "./scripts/build.sh",
     "deploy": "NODE_DEBUG=gh-pages gh-pages -d out -t",
